# UFAZ_DSA_Final_Project

include/: blockchain.h  interface_utils.h
project/: CMakeLists.txt  main.c
project/include/: input_output.h  transactions.h  transactions_utils.h
project/src/: input_output.c  interface_utils.c  transactions.c
src/: blockchain.c  transactions_utils.c
